force-app/main/default/objects/b3o__Reference__c/b3o__Reference__c.object-meta.xml
<CustomObject>
    <label>3B Reference</label>
    <nameField>
        <displayFormat>REF-ID-{00}</displayFormat>
        <label>Reference ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>3B References</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>