force-app/main/default/objects/b3o__Reference__c/fields/b3o__Application__c.field-meta.xml
<CustomField>
    <fullName>b3o__Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>b3o__Application__c</referenceTo>
    <relationshipName>References</relationshipName>
    <type>Lookup</type>
</CustomField>