force-app/main/default/objects/b3o__Reference__c/fields/b3o__Contact__c.field-meta.xml
<CustomField>
    <fullName>b3o__Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>References</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>