force-app/main/default/objects/b3o__Reference__c/fields/b3o__Email_Referee__c.field-meta.xml
<CustomField>
    <fullName>b3o__Email_Referee__c</fullName>
    <label>Email Referee</label>
    <type>Email</type>
</CustomField>