force-app/main/default/objects/b3o__Reference__c/fields/b3o__Employee_Comments__c.field-meta.xml
<CustomField>
    <fullName>b3o__Employee_Comments__c</fullName>
    <label>Employee Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>