force-app/main/default/objects/b3o__Reference__c/fields/b3o__End_Date__c.field-meta.xml
<CustomField>
    <fullName>b3o__End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>