force-app/main/default/objects/b3o__Reference__c/fields/b3o__Organisation_Name__c.field-meta.xml
<CustomField>
    <fullName>b3o__Organisation_Name__c</fullName>
    <label>Organisation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>