force-app/main/default/objects/b3o__Reference__c/fields/b3o__Organisation_Type__c.field-meta.xml
<CustomField>
    <fullName>b3o__Organisation_Type__c</fullName>
    <label>Organisation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>University</fullName>
            </value>
            <value>
                <fullName>Charity</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>