force-app/main/default/objects/b3o__Reference__c/fields/b3o__Phone_Referee__c.field-meta.xml
<CustomField>
    <fullName>b3o__Phone_Referee__c</fullName>
    <label>Phone Referee</label>
    <type>Phone</type>
</CustomField>