force-app/main/default/objects/b3o__Reference__c/fields/b3o__Position_Referee__c.field-meta.xml
<CustomField>
    <fullName>b3o__Position_Referee__c</fullName>
    <label>Position Referee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>