force-app/main/default/objects/b3o__Reference__c/fields/b3o__Status__c.field-meta.xml
<CustomField>
    <fullName>b3o__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Waiting</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>